--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
   postgres:
     image: postgres
     restart: always
-    container_name: ecommerce-development-postgres
+    container_name: ecommerce
     ports:
-      - 5932:5932
+      - 5932:5432
     env_file:
-      - .env.local
+      - .env
     volumes:
       - postgres:/data/postgres
 
